kubernetes/core/haproxy/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: haproxy-controller
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: haproxy
  namespace: haproxy-controller
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: haproxy-controller-haproxy-controller
      app.kubernetes.io/name: kubernetes-ingress
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
        - namespaceSelector: {}
      ports:
        - port: 8443
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 1024
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to: # To actually be an ingress
        - namespaceSelector: {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: haproxy
  namespace: haproxy-controller
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: haproxy-controller-haproxy-controller
      app.kubernetes.io/name: kubernetes-ingress
  egress:
    - toEntities:
      - kube-apiserver
      - world
